
[project]
name = "production_entry"
authors = [
    { name = "Your Company", email = "info@yourcompany.com" }
]
description = "Integrated Production Entry for Multi-Width Fabric Manufacturing"
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "frappe",
    "erpnext"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
